--- a/file.css
+++ b/file.css
@@ -8,11 +8,11 @@
 }
 .h1{
     color: green;
-    font-size: 25%;
+    font-size:75px;
 }
 .h2{
     color: white;
-    font-size: 30%;
+    font-size: 50px;
 }
 .h3{
     color: white;
